# banckCustomer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: dataset.csv
notebooks/: 01_data_cleaning.ipynb  02_analysis_financial_credit.ipynb  03_stakeholder_questions.ipynb
src/bank_customer/load/: load.py
src/bank_customer/transform/: clean_df.py
src/bank_customer/utils/: paths.py
src/bank_customer_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/extract/: extract.py
src/load/: load.py
src/transform/: transform.py
src/utils/: paths.py
tests/: test_clean_data.py  test_filter_data.py
